CICD integration v2