@@ -14,7 +14,7 @@
 
     <!-- Centralized Versions -->
     <selenium.version>4.21.0</selenium.version>
-    <testng.version>7.9.0</testng.version>
+    <testng.version>7.10.1</testng.version>
     <json.version>20231013</json.version>
     <gson.version>2.10.1</gson.version>
     <ashot.version>1.5.4</ashot.version>
@@ -27,7 +27,6 @@
     <allure.plugin.version>2.11.2</allure.plugin.version>
   </properties>
 
-  <!-- Selenium Core -->
   <dependencies>
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
@@ -105,6 +104,14 @@
       <artifactId>webdrivermanager</artifactId>
       <version>${webdrivermanager.version}</version>
     </dependency>
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.32</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
@@ -125,8 +132,15 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>${compiler.plugin.version}</version>
         <configuration>
+          <fork>true</fork>
+          <release>17</release>
+          <compilerArgs>
+            <arg>--add-opens</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+          </compilerArgs>
+          <!--
           <source>${maven.compiler.source}</source>
-          <target>${maven.compiler.target}</target>
+          <target>${maven.compiler.target}</target> -->
         </configuration>
       </plugin>
 
@@ -139,9 +153,11 @@
           <systemPropertyVariables>
             <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
           </systemPropertyVariables>
+          <!--
           <suiteXmlFiles>
-            <suiteXmlFile>src/test/resources/testng/allure-test.xml</suiteXmlFile>
+              <suiteXmlFile>src/test/resources/testng/allure-test.xml</suiteXmlFile>
           </suiteXmlFiles>
+          -->
         </configuration>
       </plugin>
     </plugins>
